src/test/ui/error-codes/E0009.stderr
error[E0009]: cannot bind by-move and by-ref in the same pattern
  --> $DIR/E0009.rs:15:15
   |
LL |         Some((y, ref z)) => {},
   |               ^  ----- both by-ref and by-move used
   |               |
   |               by-move pattern here

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0009"
